--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,3 +5,17 @@
     line-height: 1.75;
     text-decoration: none;
 }
+
+@media all and (min-width: 768px) {
+    .header__lang-link {
+        font-size: 24px;
+        line-height: 1.75;
+    }
+}
+
+@media all and (max-width: 767px) {
+    .header__lang-link {
+        font-size: 18px;
+        line-height: 1.75;
+    }
+}
