--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,5 +1,8 @@
 .header__lang-links {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     gap: 18px;
+    margin-top: 10px;
 }
