--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,5 +1,16 @@
 .intro {
     display: flex;
     flex-direction: column;
-    width: 720px;
+}
+
+@media all and (min-width: 768px) {
+    .intro {
+        width: 720px;
+    }
+}
+
+@media all and (max-width: 767px) {
+    .intro {
+        width: 288px;
+    }
 }
