--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -4,3 +4,24 @@
         height: 615px;
     }
 }
+
+@media all and (min-width: 1024px) and (max-width: 1279px) {
+    .lead__image {
+        width: 928px;
+        height: 580px;
+    }
+}
+
+@media all and (min-width: 768px) and (max-width: 1023px) {
+    .lead__image {
+        width: 768px;
+        height: 480px;
+    }
+}
+
+@media all and (max-width: 767px) {
+    .lead__image {
+        width: 320px;
+        height: 200px;
+    }
+}
