--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,9 +1,24 @@
 .lead__subtitle {
-    margin: 32px 0 64px 0;
+    
     color: #FFF;
-    font-size: 1.875rem;
     font-weight: 400;
-    line-height: 2.25rem;
-    text-align: center;
-    width: 640px;
+    text-align: center;   
+}
+
+@media all and (min-width: 768px) {
+    .lead__subtitle {
+        font-size: 1.875rem;
+        line-height: 2.25rem;
+        width: 640px;
+        margin: 32px 0 64px 0;
+    }
+}
+
+@media all and (max-width: 767px) {
+    .lead__subtitle {
+        font-size: 1rem;
+        line-height: 1.25rem;
+        width: 288px;
+        margin: 16px 0 40px 0;
+    }
 }
