--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,9 +2,22 @@
     margin: 0;
     color: #FFF;
     font-weight: 900;
-    font-size: 6rem;
-    line-height: 6.25rem;
+    letter-spacing: 0;
     text-align: center;
-    width: 720px;
 }
 
+@media all and (min-width: 768px) {
+    .lead__title {
+        font-size: 6rem;
+        line-height: 6.25rem;
+        width: 720px;
+    }
+}
+
+@media all and (max-width: 767px) {
+    .lead__title {
+        font-size: 2.5rem;
+        line-height: 2.75rem;
+        width: 288px
+    }
+}
