--- a/blocks/lead/_offset/lead_offset.css
+++ b/blocks/lead/_offset/lead_offset.css
@@ -3,3 +3,21 @@
         margin: 56px 148px 0 148px;
     }
 }
+
+@media all and (min-width: 1024px) and (max-width: 1279px) {
+    .lead_offset {
+        margin: 48px 48px 0 48px;
+    }
+}
+
+@media all and (min-width: 768px) and (max-width: 1023px) {
+    .lead_offset {
+        margin: 48px 0 0 0;
+    }
+}
+
+@media all and (max-width: 767px) {
+    .lead_offset {
+        margin: 48px 0 0 0;
+    }
+}
