--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url("../blocks/page/page.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/_offset/header_offset.css");
+@import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/header/__lang-links/header__lang-links.css");
 @import url("../blocks/header/__lang-link/header__lang-link.css");
 @import url("../blocks/header/__lang-link/_ru/header__lang-link_ru.css");
@@ -12,8 +13,35 @@
 @import url("../blocks/lead/__image/lead__image.css");
 @import url("../blocks/lead/__caption/lead__caption.css");
 @import url("../blocks/intro/intro.css");
+@import url("../blocks/intro/_offset/intro_offset.css");
 @import url("../blocks/intro/__title/intro__title.css");
 @import url("../blocks/intro/__text/intro__text.css");
 @import url("../blocks/intro/__list/intro__list.css");
 @import url("../blocks/intro/__list-item/intro__list-item.css");
 @import url("../blocks/intro/__list-item/_bold/intro__list-item_bold.css");
+@import url("../blocks/photo-grid/photo-grid.css");
+@import url("../blocks/photo-grid/_offset/photo-grid_offset.css");
+@import url("../blocks/photo-grid/__item/photo-grid__item.css");
+@import url("../blocks/places/places.css");
+@import url("../blocks/places/_offset/places_offset.css");
+@import url("../blocks/place/place.css");
+@import url("../blocks/place/__column/place__column.css");
+@import url("../blocks/place/__title/place__title.css");
+@import url("../blocks/place/__image/place__image.css");
+@import url("../blocks/place/__website/place__website.css");
+@import url("../blocks/place/__website/_big/place__website_big.css");
+@import url("../blocks/place/__website/_small/place__website_small.css");
+@import url("../blocks/place/__url-heading/place__url-heading.css");
+@import url("../blocks/place/__url/place__url.css");
+@import url("../blocks/place/__paragraph/place__paragraph.css");
+@import url("../blocks/cover/cover.css");
+@import url("../blocks/cover/__title/cover__title.css");
+@import url("../blocks/cover/__subtitle/cover__subtitle.css");
+@import url("../blocks/cover/__overlay/cover__overlay.css");
+@import url("../blocks/cover/__background/cover__background.css");
+@import url("../blocks/cover/__content/cover__content.css");
+@import url("../blocks/footer/footer.css");
+@import url("../blocks/footer/_offset/footer_offset.css");
+@import url("../blocks/footer/__links/footer__links.css");
+@import url("../blocks/footer/__link/footer__link.css");
+@import url("../blocks/footer/__copyright/footer__copyright.css");
