--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,3 +8,11 @@
     text-decoration: none;
     max-width: 540px;
 }
+
+@media all and (max-width: 767px) {
+    .cover__title {
+        font-size: 2rem;
+        line-height: 2.1875rem;
+        max-width: 240px;
+    }
+}
