--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -18,3 +18,11 @@
         height: 340px;
     }
 }
+
+@media all and (max-width: 767px) {
+    .place__image {
+        width: 320px;
+        height: 320px;
+        margin-bottom: 32px;
+    }
+}
