--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -27,3 +27,10 @@
         height: 480px;
     }
 }
+
+@media all and (max-width: 767px) {
+    .cover__overlay {
+        width: 320px;
+        height: 200px;
+    }
+}
