--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,3 +7,10 @@
     text-align: right;
     color: #FFFFFF;
 }
+
+@media all and (max-width: 767px) {
+    .footer__copyright {
+        text-align: left;
+        line-height: 0.875rem;
+    }
+}
