--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -12,3 +12,10 @@
 .footer__link:hover {
     opacity: 0.8;
 }
+
+@media all and (max-width: 767px) {
+    .footer__link {
+        font-size: 1.5rem;
+        line-height: 1.5rem;
+    }
+}
