--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -3,3 +3,10 @@
     flex-direction: row;
     gap: 18px;
 }
+
+@media all and (max-width: 767px) {
+    .footer__links {
+        flex-direction: column;
+        gap: 32px;
+    }
+}
