--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,3 +3,10 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+@media all and (max-width: 767px) {
+    .footer {
+        flex-direction: column;
+        gap: 48px;
+    }
+}
