--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,8 +1,28 @@
 .place__paragraph {
     margin: 0 0 26px 0;
-    font-size: 1.125rem;
     line-height: 163%;
     letter-spacing: 0;
     text-align: left;
     color: #FFFFFF;
 }
+
+@media all and (min-width: 1024px) {
+    .place__paragraph {
+        font-size: 1.125rem;
+    }
+}
+
+@media all and (min-width: 768px) and (max-width: 1023px) {
+    .place__paragraph {
+        font-size: 1rem;
+        margin: 0 0 25px 0;
+    }
+}
+
+@media all and (max-width: 767px) {
+    .place__paragraph {
+        font-size: 1rem;
+        margin: 0 16px 25px 16px;
+    }
+}
+
