--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,8 +4,17 @@
     color: #FFF;
 }
 
-@media all and (min-width: 1024px) {
+@media all and (min-width: 1280px) {
     .place__title {
+        width: 460px;
+        font-size: 4.5rem;
+        line-height: 4.75rem;
+    }
+}
+
+@media all and (min-width: 1024px) and (max-width: 1279px) {
+    .place__title {
+        width: 440px;
         font-size: 4.5rem;
         line-height: 4.75rem;
     } 
@@ -13,7 +22,17 @@
 
 @media all and (min-width: 768px) and (max-width: 1023px) {
     .place__title {
+        width: 340px;
         font-size: 2.625rem;
         line-height: 2.875rem;
     } 
+}
+
+@media all and (max-width: 767px) {
+    .place__title {
+        margin: 0 0 32px 16px;
+        width: 288px;
+        font-size: 2rem;
+        line-height: 2.1875rem;
+    }
 }
