--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,3 +1,11 @@
-.place__website {
-    margin-bottom: 48px;
+@media all and (min-width: 768px) {
+    .place__website {
+        margin-bottom: 48px;
+    }
+}
+
+@media all and (max-width: 767px) {
+    .place__website {
+        margin: 0 auto 32px 16px;
+    }
 }
